# django-institutions

./: LICENSE  README.md  pyproject.toml  setup.cfg
django_institutions/: __init__.py  fields.py  serializer_fields.py  world_universities_and_domains.json
